# premiumflow

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  .yamlfmt.yml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  REFACTORING_PLAN.md  filter_csv.py  mypy.ini  pyproject.toml  requirements.txt  roll.py  sitecustomize.py  test_roll.py  test_roll_chain.py  test_roll_comprehensive.py  test_roll_simple.py  test_rollchain.py
.cursor/: agent.md  quick-reference.md
.github/workflows/: ci.yml
docs/: code-review-guidelines.md  development-guidelines.md  import-cash-flow.md
docs/developers/: agent-files-template.md  cli.md  development.md
docs/guidelines/: commit-pr.md  web-ui.md
options/: __init__.py
premiumflow/: __init__.py
rich/: __init__.py  console.py  panel.py  table.py
rollchain/: __init__.py
scripts/: check-file-length.py  check-pr-feedback.sh
src/options/: __init__.py  __main__.py
src/options/cli/: __init__.py  analyze.py  commands.py  ingest.py  lookup.py  trace.py
src/options/services/: analysis.py  display.py  transactions.py
src/premiumflow/: __init__.py  __main__.py
src/premiumflow/cli/: __init__.py  analyze.py  cashflow.py  commands.py  cost_basis.py  import_command.py  ingest.py  legs.py  lookup.py  positions.py  shares.py  trace.py  utils.py
src/premiumflow/core/: __init__.py  legs.py  models.py  parser.py
src/premiumflow/formatters/: output.py
src/premiumflow/persistence/: __init__.py  repository.py  storage.py
src/premiumflow/services/: __init__.py  analysis.py  analyzer.py  cash_flow.py  cash_flow_aggregations.py  cash_flow_helpers.py  cash_flow_models.py  cash_flow_period_metrics.py  cash_flow_periods.py  cash_flow_pnl_aggregators.py  cash_flow_pnl_keys.py  cash_flow_report.py  cash_flows.py  chain_builder.py  cli_helpers.py  cost_basis.py  display.py  external_tax_lots.py  json_serializer.py  leg_matching.py  options.py  positions.py  stock_lot_builder.py  stock_lot_service.py  stock_lots.py  targets.py  transaction_loader.py  transactions.py
src/premiumflow/web/: __init__.py  app.py  dependencies.py
src/premiumflow/web/static/: site.css
src/premiumflow/web/templates/: cashflow.html  cost_basis.html  import_detail.html  imports.html  index.html  legs.html  positions.html  stock_lots.html
src/rollchain/: __init__.py  __main__.py
src/rollchain/cli/: __init__.py  analyze.py  commands.py  ingest.py  lookup.py  trace.py  utils.py
src/rollchain/core/: __init__.py  models.py  parser.py
src/rollchain/formatters/: __init__.py  output.py
src/rollchain/services/: __init__.py  analysis.py  analyzer.py  chain_builder.py  cli_helpers.py  display.py  json_serializer.py  targets.py  transactions.py
tests/: __init__.py  conftest.py  test_analysis_service.py  test_analyze_command.py  test_analyzer.py  test_cashflow_command.py  test_chain_builder.py  test_ci_coverage.py  test_cli.py  test_cli_helpers_service.py  test_cli_utils.py  test_cost_basis_command.py  test_display_service.py  test_formatters.py  test_import_command.py  test_import_parser_spec.py  test_ingest_command.py  test_integration.py  test_json_serializer_service.py  test_lookup.py  test_lookup_command.py  test_parser.py  test_persistence_repository.py  test_persistence_storage.py  test_shares_command.py  test_stock_transfer_import.py  test_targets_service.py  test_trace_command.py  test_web_app.py
tests/core/: test_legs.py
tests/fixtures/: options_sample.csv
tests/services/: test_cash_flow.py  test_cash_flow_reporting.py  test_cash_flows.py  test_cost_basis.py  test_external_tax_lots.py  test_leg_matching.py  test_positions.py  test_stock_lot_builder.py  test_stock_lot_service.py
